# libsg

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  TODO.md  module.def.in  version.rc.in
cache_code/libuv_tcp_udp_1/: .gitignore  LICENSE  README.md  tcp.c  tcp_server.c  tcp_server.h
cache_code/libuv_tcp_udp_1/test/: Makefile
cache_code/libuv_tcp_udp_2/: CMakeLists.txt  ReadMe.txt
cache_code/libuv_tcp_udp_2/include/: tcp.h  tcp_common.h  tcp_server.h  udp.h
cache_code/libuv_tcp_udp_2/lib/: libuvx.so.1  libuvx.so.1.0
cache_code/libuv_tcp_udp_2/sample/: CMakeLists.txt  Makefile  multiple_clients.c  tcp_client.c  tcp_server.c  udp-echo.c
cache_code/libuv_tcp_udp_2/src/: CMakeLists.txt  tcp.c  tcp_common.c  tcp_server.c  udp.c
cache_code/my_enet/: .project  build.sh  build_win.bat  enet-1.3.13.tar  enet_build.sh  Ê¹ÓÃËµÃ÷
cache_code/my_enet/client/: rudp_client.c  rudp_client.h  rudp_client_test.c
cache_code/my_enet/enet/lib/: libenet.la
cache_code/my_enet/enet/lib/pkgconfig/: libenet.pc
cache_code/my_enet/server/: rudp_server.c  rudp_server.h  rudp_server_test.c
include/: sg.h
include/compress/: zip.h
include/container/: list.h
include/media/: color.h  font.h  image.h  image_cv.h  image_sdl.h
include/net/: etp.h  etp_server.h  http.h  kcp.h  kcp_server.h  net.h  udp.h  udp2.h
include/platform/windows/: dial.h
include/sg/: sg.h
include/sg/compress/: md5.h  pigz.h  snappy.h  zip.h  zlib.h
include/sg/container/: bip_buf.h  bloom_filter.h  counting_bloom_filter.h  json.h  kfifo.h  list.h  msgpack.h  queue.h  scaling_bloom_filter.h  vlbuf.h  vsbuf.h  xml.h
include/sg/crypto/: mac.h  md.h  reg_crypto.h  sym.h
include/sg/db/: bdb.h  berkeleydb.h  ejdb.h  pgsql.h  sqlite.h
include/sg/distributed/: dht.h
include/sg/hash/: crc.h  digest_hash.h  murmur.h  uuid.h
include/sg/hdw/: cpu.h  hd.h  memory.h  netcard.h
include/sg/math/: big_float.h  big_int.h  big_num.h  c_float.h  c_int.h  num.h  num_sys.h  number.h  random.h  speed.h
include/sg/media/: color.h  player.h  rtsp.h
include/sg/net/: dns.h  dns_server.h  enet.h  enet_server.h  etp.h  etp_private.h  etp_server.h  http.h  http_server.h  ip.h  net_card.h  net_comm.h  net_speed.h  net_test.h  ntp.h  ntp_server.h  p2p.h  p2p_agent.h  p2p_middle.h  p2p_server.h  ping.h  port.h  protocol.h  proxy.h  quic.h  quic_server.h  raft.h  reverse_proxy.h  socket_util.h  speed_stat.h  tcp.h  tcp_server.h  udp.h  udp2.h  udp_server.h  url.h  websocket.h  webui_server.h
include/sg/platform/windows/: dial.h  dirent.h  snprintf.h
include/sg/str/: base64.h  charset.h  regex.h  snprintf.h  string.h  vlstr.h  vlstr_list.h  vsstr.h  vsstr_list.h  xml.h
include/sg/sys/: atom.h  bool.h  byte_order  clock.h  coroutine.h  cron.h  daemon.h  dlib.h  dynlib.h  file.h  flag.h  fs.h  hdw.h  hook.h  limit.h  mem.h  memory.h  mmap.h  module.h  mq.h  mutex.h  os.h  pipe.h  proc.h  rwlock.h  sem.h  shell.h  shm.h  signal.h  sleep.h  spin_lock.h  spinlock.h  thread.h  time.h  type.h
include/sg/util/: assert.h  bound.h  cl.h  compiler.h  def.h  dump.h  err.h  limit.h  log.h  trick.h  type.h
include/str/: json.h  json_check.h  lang.h  regex.h
include/sys/: atom.h  cron.h  daemon.h  flag.h  mutex.h  os.h  port.h  proc.h  thread.h
include/util/: dump.h  err.h  log.h  vlbuf.h
res/image/test image/: 24bit.tif  8bit.tif
scripts/: build-ffmpeg-linux.sh  build-ffmpeg-macos.sh  build-ffmpeg-win.sh  build-vlc-linux.sh  build-vlc-macos.sh  build-vlc-win.sh  combine_libs.sh  install-brew.sh  install-lua-dev.sh  install-xmake.sh
src/: sg.c
src/compress/: md5.c  zip.c  zlib.c
src/container/: bip_buf.c  bloom_filter.c  json.c  list.c  vlbuf.c  vsbuf.c  xml.c
src/crypto/: mac.c  md.c  sym.c
src/db/: pgsql.c  sqlite.c
src/hash/: crc.c  crc_impl.c  crc_impl.h
src/hdw/: cpu.c  netcard.c
src/math/: big_float.c  big_int.c  c_float.c  num.c  number.c  random.c  speed.c  uuid.c
src/media/: color.c  font.c  image.c  image_cv.cpp  image_sdl.c  pixel.c  player.c  rtsp.c
src/net/: etp.c  etp_client_shared.h  etp_server.c  http.c  http_server.c  kcp.c  kcp_server.c  net.c  net_card.c  speed_stat.c  udp.c  udp2.c  uv_comm.h  websocket.c  webui_server.c
src/platform/windows/: dial.c  dirent.c
src/str/: base64.c  charset.c  json.c  json_check.c  regex.c  snprintf.c  string.c  vlstr.c  vlstr_list.c  vsstr.c  vsstr_list.c  xml.c
src/sys/: clock.c  cron.c  daemon.c  dlib.c  dynlib.c  file.c  flag.c  fs.c  module.c  mutex.c  os.c  proc.c  shell.c  sleep.c  thread.c  time.c
src/util/: dump.c  err.c  log.c
src_media/: color.c  player.c  rtsp.c
test/unit/: CMakeLists.txt  base64.c  base64.cpp  big_float.cpp  big_int.cpp  bip_buf.c  bloom_filter.cpp  charset.c  charset.cpp  crc.cpp  etp.c  etp_server.c  http.c  http_server.c  img_cv.cpp  img_sdl.c  json.cc  json2.cpp  kcp_client.c  kcp_server.c  libwebsockets-test-server.key.pem  libwebsockets-test-server.pem  mac.cpp  make_bip_buf.sh  make_http_test.sh  make_json_test.sh  make_test.sh  md.cpp  mongodb.c  mysql.c  nats_client.c  net_card.cpp  netcard.cpp  proc.c  proc.cpp  random.cpp  redis.c  rwlock.c  speed.cpp  sym.cpp
test/unit/camera/: CMakeLists.txt  camera.c  make_camera.sh  make_watch.sh  watch.c
test/unit/etp_build/: CMakeLists.txt
test/unit/rtsp-kcp/: camera  camera.c  make.sh  watch.c
test/unit/test image/: 32bit.tif
test/unit/test_kcp/: CMakeLists.txt
test/unit/websocket/: websocket.html
tool/: make_image_cv.sh  make_wss.sh
tool/code formatter/: formatter_linux.sh
trash/: font.c  pixel.h
